[package]
name = "ledgers-api"
version = "0.1.1"
authors = ["John <yehohanan7@gmail.com>"]
edition = "2018"
description = "a client for the ledgers server"
license = "MIT"

[dependencies]
tokio = { version = "0.2", features = ["full"] }
futures = "0.3.5"
prost = "0.6"
tonic = "0.2.1"

[build-dependencies]
tonic-build = "0.2"
